Feat : 加入第一個 video skip

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,8 +7,7 @@
       "skipLibCheck": true,
       "forceConsistentCasingInFileNames": true,
       "outDir": "./dist",
-      "declaration": false,
-      "removeComments": false
+      "declaration": false
     },
     "include": ["src/**/*"],
     "exclude": ["node_modules", "dist"]
