--- a/package.json
+++ b/package.json
@@ -5,11 +5,20 @@
   "author": "vanisoul <ga2006088445@gmail.com>",
   "license": "MIT",
   "type": "module",
+  "scripts": {
+    "build": "rollup -c"
+  },
   "dependencies": {
     "@rollup/plugin-typescript": "^11.1.5",
     "rollup": "^4.9.2",
     "rollup-plugin-terser": "^7.0.2",
     "tslib": "^2.6.2",
     "typescript": "^5.3.3"
+  },
+  "devDependencies": {
+    "@rollup/plugin-commonjs": "^25.0.7",
+    "@rollup/plugin-node-resolve": "^15.2.3",
+    "@types/tampermonkey": "^5.0.2",
+    "dashjs": "^2.9.3"
   }
 }
