--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,8 @@
       "forceConsistentCasingInFileNames": true,
       "outDir": "./dist",
       "declaration": false,
-      "removeComments": true
+      "removeComments": true,
+      "moduleResolution": "node"
     },
     "include": ["src/**/*"],
     "exclude": ["node_modules", "dist"]
