--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "typescript": "^5.3.3"
   },
   "devDependencies": {
+    "@types/jquery": "^3.5.29",
     "@types/tampermonkey": "^5.0.2"
   }
 }
