--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "license": "MIT",
   "type": "module",
   "scripts": {
+    "convertTsx": "babel ./src/ --out-dir  ./temp/ --extensions .ts,.tsx",
     "build": "rollup -c"
   },
   "dependencies": {
@@ -13,10 +14,18 @@
     "rollup": "^4.9.2",
     "rollup-plugin-terser": "^7.0.2",
     "tslib": "^2.6.2",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "vue": "^3.2.36"
   },
   "devDependencies": {
+    "@babel/cli": "^7.17.6",
+    "@babel/core": "^7.17.5",
+    "@babel/preset-typescript": "^7.16.7",
+    "@rollup/plugin-babel": "^6.0.4",
+    "@rollup/plugin-node-resolve": "^15.2.3",
     "@types/jquery": "^3.5.29",
-    "@types/tampermonkey": "^5.0.2"
+    "@types/tampermonkey": "^5.0.2",
+    "@vue/babel-plugin-jsx": "^1.1.5",
+    "rollup-plugin-vue": "^6.0.0"
   }
 }
