--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
     "compilerOptions": {
-      "target": "es6",
+      "target": "ES2020",
       "module": "ESNext",
       "strict": true,
       "esModuleInterop": true,
@@ -9,7 +9,10 @@
       "outDir": "./dist",
       "declaration": false,
       "removeComments": true,
-      "moduleResolution": "node"
+      "moduleResolution": "node",
+      "jsx": "preserve",
+      "lib": ["ES2020", "DOM", "DOM.Iterable"],
+
     },
     "include": ["src/**/*"],
     "exclude": ["node_modules", "dist"]
