--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
     "compilerOptions": {
-      "target": "ES2020",
+      "target": "es6",
       "module": "ESNext",
       "strict": true,
       "esModuleInterop": true,
