--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "build": "rollup -c"
   },
   "dependencies": {
+    "@rollup/plugin-commonjs": "^25.0.7",
     "@rollup/plugin-typescript": "^11.1.5",
+    "element-plus": "^2.4.4",
     "rollup": "^4.9.2",
     "rollup-plugin-terser": "^7.0.2",
     "tslib": "^2.6.2",
@@ -25,6 +27,7 @@
     "@types/jquery": "^3.5.29",
     "@types/tampermonkey": "^5.0.2",
     "@vue/babel-plugin-jsx": "^1.1.5",
+    "rollup-plugin-postcss": "^4.0.2",
     "rollup-plugin-vue": "^6.0.0"
   }
 }
