--- a/package.json
+++ b/package.json
@@ -9,24 +9,24 @@
     "build": "node ./rollup.config.js"
   },
   "dependencies": {
-    "@rollup/plugin-commonjs": "^25.0.7",
-    "@rollup/plugin-typescript": "^11.1.5",
     "element-plus": "^2.4.4",
-    "rollup": "^4.9.2",
-    "rollup-plugin-terser": "^7.0.2",
-    "tslib": "^2.6.2",
-    "typescript": "^5.3.3",
     "vue": "^3.2.36"
   },
   "devDependencies": {
     "@babel/core": "^7.17.5",
     "@babel/preset-typescript": "^7.16.7",
     "@rollup/plugin-babel": "^6.0.4",
+    "@rollup/plugin-commonjs": "^25.0.7",
     "@rollup/plugin-node-resolve": "^15.2.3",
+    "@rollup/plugin-typescript": "^11.1.5",
     "@types/jquery": "^3.5.29",
     "@types/tampermonkey": "^5.0.2",
     "@vue/babel-plugin-jsx": "^1.1.5",
+    "rollup": "^4.9.2",
     "rollup-plugin-postcss": "^4.0.2",
-    "rollup-plugin-vue": "^6.0.0"
+    "rollup-plugin-terser": "^7.0.2",
+    "rollup-plugin-vue": "^6.0.0",
+    "tslib": "^2.6.2",
+    "typescript": "^5.3.3"
   }
 }
