--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "license": "MIT",
   "type": "module",
   "scripts": {
-    "build": "node ./rollup.config.js"
+    "tailwind": "npx tailwindcss -i ./src/css/tailwind.css -o ./src/css/output.css",
+    "build": "yarn tailwind && node ./rollup.config.js"
   },
   "dependencies": {
     "element-plus": "^2.4.4",
@@ -22,10 +23,12 @@
     "@types/jquery": "^3.5.29",
     "@types/tampermonkey": "^5.0.2",
     "@vue/babel-plugin-jsx": "^1.1.5",
+    "postcss-prefix-selector": "^1.16.0",
     "rollup": "^4.9.2",
     "rollup-plugin-postcss": "^4.0.2",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-vue": "^6.0.0",
+    "tailwindcss": "^3.4.0",
     "tslib": "^2.6.2",
     "typescript": "^5.3.3"
   }
