Feat : 動畫瘋工具強化

--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@rollup/plugin-typescript": "^11.1.5",
     "@types/jquery": "^3.5.29",
+    "@types/requirejs": "^2.1.37",
     "@types/tampermonkey": "^5.0.2",
+    "@types/video.js": "^7.3.56",
     "@vue/babel-plugin-jsx": "^1.1.5",
     "postcss-prefix-selector": "^1.16.0",
     "rollup": "^4.9.2",
