--- a/package.json
+++ b/package.json
@@ -10,26 +10,31 @@
     "build": "yarn tailwind && node ./rollup.config.js"
   },
   "dependencies": {
-    "element-plus": "^2.4.4",
-    "vue": "^3.2.36"
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.15.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.17.5",
+    "@babel/preset-env": "^7.23.8",
+    "@babel/preset-react": "^7.23.3",
     "@babel/preset-typescript": "^7.16.7",
     "@rollup/plugin-babel": "^6.0.4",
     "@rollup/plugin-commonjs": "^25.0.7",
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@rollup/plugin-typescript": "^11.1.5",
     "@types/jquery": "^3.5.29",
+    "@types/react": "^18.2.47",
+    "@types/react-dom": "^18.2.18",
     "@types/requirejs": "^2.1.37",
     "@types/tampermonkey": "^5.0.2",
     "@types/video.js": "^7.3.56",
-    "@vue/babel-plugin-jsx": "^1.1.5",
     "postcss-prefix-selector": "^1.16.0",
     "rollup": "^4.9.2",
     "rollup-plugin-postcss": "^4.0.2",
     "rollup-plugin-terser": "^7.0.2",
-    "rollup-plugin-vue": "^6.0.0",
     "tailwindcss": "^3.4.0",
     "tslib": "^2.6.2",
     "typescript": "^5.3.3"
