--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,8 @@
 {
-    "files.associations": {
-      "*.css": "tailwindcss"
-    }
-  }
+  "files.associations": {
+    "*.css": "tailwindcss"
+  },
+  "cSpell.words": [
+    "bilibili"
+  ]
+}
