--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@rollup/plugin-typescript": "^11.1.5",
     "@svgr/rollup": "^8.1.0",
+    "@types/hls.js": "^1.0.0",
     "@types/jquery": "^3.5.29",
     "@types/react": "^18.2.47",
     "@types/react-dom": "^18.2.18",
