--- a/package.json
+++ b/package.json
@@ -1,44 +1,45 @@
 {
-  "name": "tampermonkey-typescript",
-  "version": "1.0.0",
-  "main": "index.js",
-  "author": "vanisoul <ga2006088445@gmail.com>",
-  "license": "MIT",
-  "type": "module",
-  "scripts": {
-    "tailwind": "npx tailwindcss -i ./src/css/tailwind.config.css -o ./src/css/tailwind.css",
-    "build": "yarn tailwind && node ./rollup.config.js"
-  },
-  "dependencies": {
-    "@emotion/react": "^11.11.3",
-    "@emotion/styled": "^11.11.0",
-    "@mui/material": "^5.15.4",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.17.5",
-    "@babel/preset-env": "^7.23.8",
-    "@babel/preset-react": "^7.23.3",
-    "@babel/preset-typescript": "^7.16.7",
-    "@rollup/plugin-babel": "^6.0.4",
-    "@rollup/plugin-commonjs": "^25.0.7",
-    "@rollup/plugin-node-resolve": "^15.2.3",
-    "@rollup/plugin-typescript": "^11.1.5",
-    "@svgr/rollup": "^8.1.0",
-    "@types/hls.js": "^1.0.0",
-    "@types/jquery": "^3.5.29",
-    "@types/react": "^18.2.47",
-    "@types/react-dom": "^18.2.18",
-    "@types/requirejs": "^2.1.37",
-    "@types/tampermonkey": "^5.0.2",
-    "@types/video.js": "^7.3.56",
-    "postcss-prefix-selector": "^1.16.0",
-    "rollup": "^4.9.2",
-    "rollup-plugin-postcss": "^4.0.2",
-    "rollup-plugin-terser": "^7.0.2",
-    "tailwindcss": "^3.4.0",
-    "tslib": "^2.6.2",
-    "typescript": "^5.3.3"
-  }
+	"name": "tampermonkey-typescript",
+	"version": "1.0.0",
+	"main": "index.js",
+	"author": "vanisoul <ga2006088445@gmail.com>",
+	"license": "MIT",
+	"type": "module",
+	"scripts": {
+		"tailwind": "npx tailwindcss -i ./src/css/tailwind.config.css -o ./src/css/tailwind.css",
+		"build": "yarn tailwind && node ./rollup.config.js"
+	},
+	"dependencies": {
+		"@emotion/react": "^11.11.3",
+		"@emotion/styled": "^11.11.0",
+		"@mui/material": "^5.15.4",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0"
+	},
+	"devDependencies": {
+		"@babel/core": "^7.17.5",
+		"@babel/preset-env": "^7.23.8",
+		"@babel/preset-react": "^7.23.3",
+		"@babel/preset-typescript": "^7.16.7",
+		"@biomejs/biome": "1.9.4",
+		"@rollup/plugin-babel": "^6.0.4",
+		"@rollup/plugin-commonjs": "^25.0.7",
+		"@rollup/plugin-node-resolve": "^15.2.3",
+		"@rollup/plugin-typescript": "^11.1.5",
+		"@svgr/rollup": "^8.1.0",
+		"@types/hls.js": "^1.0.0",
+		"@types/jquery": "^3.5.29",
+		"@types/react": "^18.2.47",
+		"@types/react-dom": "^18.2.18",
+		"@types/requirejs": "^2.1.37",
+		"@types/tampermonkey": "^5.0.2",
+		"@types/video.js": "^7.3.56",
+		"postcss-prefix-selector": "^1.16.0",
+		"rollup": "^4.9.2",
+		"rollup-plugin-postcss": "^4.0.2",
+		"rollup-plugin-terser": "^7.0.2",
+		"tailwindcss": "^3.4.0",
+		"tslib": "^2.6.2",
+		"typescript": "^5.3.3"
+	}
 }
